[gd_scene load_steps=3 format=3 uid="uid://dht3l2jfp35it"]

[ext_resource type="Script" uid="uid://dav3vcy8dkyf0" path="res://components/pickup/pick_up_ui.gd" id="1_vo7m6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo7m6"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="PickUpUi" type="PickUpUi"]
script = ExtResource("1_vo7m6")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vo7m6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ObjectList" type="ItemList" parent="PanelContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerList" type="TabContainer" parent="PanelContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Ok" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "确定"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="item_clicked" from="PanelContainer/VBoxContainer/HSplitContainer/ObjectList" to="." method="_on_object_list_item_clicked"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
